--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 *{
+	font-size: 14px;
 	font-family: 'Montserrat', sans-serif;
 	margin: 0px;
 }
@@ -14,6 +15,8 @@
 	color: white;
 }
 .logo {
+	width: 50px;
+	height: 40px;
 	padding-left: 90px;
 }
 .options {
@@ -130,7 +133,6 @@ h2 {
 .watch {
 	height: 475px;
 	display: flex;
-	border: 1px solid black;
 }
 .text-box{
 	width: 500px;
@@ -160,6 +162,10 @@ li{
 	padding-bottom: 20px;
 }
 
+li:hover{
+	color:#FF00BF;
+}
+
 .footer-2{
 	height: 200px;
 	background-color: #333447;
@@ -167,7 +173,7 @@ li{
 	text-align: center;
 }
 
-a {
+#icon {
 	font-size: 30px;
 	padding: 20px;
 	padding-bottom: 10px;
